fix gap between generated coops

--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body {
 .main {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 10px;
   background-image: linear-gradient(
     45deg,
     rgb(95, 32, 32),
@@ -34,7 +33,7 @@ body {
   display: flex;
   flex-direction: column;
   padding: 1rem;
-  margin: 0 1rem;
+  margin: 0 10px 10px 10px;
   background-image: linear-gradient(
     135deg,
     rgb(170, 253, 161),
